Bite/AntlrGenerated/AntlrBiteParser/BITEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BITE.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AntlrBiteParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class BITEParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DeclareModule=1, DeclareClass=2, DeclareStruct=3, DeclareClassInstance=4, 
		DeclareFunction=5, DeclareVariable=6, DeclareGetter=7, DeclareSetter=8, 
		DeclareForLoop=9, DeclareWhileLoop=10, DeclareStatic=11, DeclareAbstract=12, 
		DeclarePublic=13, DeclarePrivate=14, ControlFlowIf=15, ControlFlowElse=16, 
		FunctionReturn=17, Break=18, NullReference=19, ThisReference=20, UsingDirective=21, 
		ImportDirective=22, AssignOperator=23, PlusAssignOperator=24, MinusAssignOperator=25, 
		MultiplyAssignOperator=26, DivideAssignOperator=27, ModuloAssignOperator=28, 
		BitwiseAndAssignOperator=29, BitwiseOrAssignOperator=30, BitwiseXorAssignOperator=31, 
		BitwiseLeftShiftAssignOperator=32, BitwiseRightShiftAssignOperator=33, 
		LogicalOrOperator=34, LogicalAndOperator=35, UnequalOperator=36, EqualOperator=37, 
		GreaterOperator=38, ShiftRightOperator=39, GreaterEqualOperator=40, SmallerOperator=41, 
		ShiftLeftOperator=42, SmallerEqualOperator=43, MinusOperator=44, MinusMinusOperator=45, 
		PlusOperator=46, PlusPlusOperator=47, DivideOperator=48, MultiplyOperator=49, 
		LogicalNegationOperator=50, DotOperator=51, QuestionMarkOperator=52, ColonOperator=53, 
		ReferenceOperator=54, ModuloOperator=55, ComplimentOperator=56, BitwiseAndOperator=57, 
		BitwiseXorOperator=58, BitwiseOrOperator=59, OpeningRoundBracket=60, ClosingRoundBracket=61, 
		OpeningCurlyBracket=62, ClosingCurlyBracket=63, SquarebracketLeft=64, 
		SquarebracketRight=65, CommaSeperator=66, SemicolonSeperator=67, BooleanLiteral=68, 
		False_=69, True_=70, IntegerLiteral=71, FloatingLiteral=72, StringLiteral=73, 
		UnterminatedStringLiteral=74, DecimalLiteral=75, Identifier=76, COMMENT=77, 
		WS=78, LINE_COMMENT=79;
	public const int
		RULE_program = 0, RULE_module = 1, RULE_moduleDeclaration = 2, RULE_importDirective = 3, 
		RULE_usingDirective = 4, RULE_declaration = 5, RULE_classDeclaration = 6, 
		RULE_structDeclaration = 7, RULE_functionDeclaration = 8, RULE_classInstanceDeclaration = 9, 
		RULE_variableDeclaration = 10, RULE_statements = 11, RULE_statement = 12, 
		RULE_exprStatement = 13, RULE_localVarInitializer = 14, RULE_forInitializer = 15, 
		RULE_forIterator = 16, RULE_forStatement = 17, RULE_ifStatement = 18, 
		RULE_returnStatement = 19, RULE_breakStatement = 20, RULE_usingStatement = 21, 
		RULE_whileStatement = 22, RULE_block = 23, RULE_expression = 24, RULE_assignment = 25, 
		RULE_ternary = 26, RULE_logicOr = 27, RULE_logicAnd = 28, RULE_bitwiseOr = 29, 
		RULE_bitwiseXor = 30, RULE_bitwiseAnd = 31, RULE_equality = 32, RULE_relational = 33, 
		RULE_shift = 34, RULE_additive = 35, RULE_multiplicative = 36, RULE_unary = 37, 
		RULE_call = 38, RULE_primary = 39, RULE_privateModifier = 40, RULE_publicModifier = 41, 
		RULE_abstractModifier = 42, RULE_staticModifier = 43, RULE_parameters = 44, 
		RULE_arguments = 45, RULE_inheritance = 46, RULE_callArguments = 47, RULE_elementAccess = 48, 
		RULE_elementIdentifier = 49, RULE_argumentExpression = 50, RULE_parametersIdentifier = 51;
	public static readonly string[] ruleNames = {
		"program", "module", "moduleDeclaration", "importDirective", "usingDirective", 
		"declaration", "classDeclaration", "structDeclaration", "functionDeclaration", 
		"classInstanceDeclaration", "variableDeclaration", "statements", "statement", 
		"exprStatement", "localVarInitializer", "forInitializer", "forIterator", 
		"forStatement", "ifStatement", "returnStatement", "breakStatement", "usingStatement", 
		"whileStatement", "block", "expression", "assignment", "ternary", "logicOr", 
		"logicAnd", "bitwiseOr", "bitwiseXor", "bitwiseAnd", "equality", "relational", 
		"shift", "additive", "multiplicative", "unary", "call", "primary", "privateModifier", 
		"publicModifier", "abstractModifier", "staticModifier", "parameters", 
		"arguments", "inheritance", "callArguments", "elementAccess", "elementIdentifier", 
		"argumentExpression", "parametersIdentifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'module'", "'class'", "'struct'", "'new'", "'function'", "'var'", 
		"'get'", "'set'", "'for'", "'while'", "'static'", "'abstract'", "'public'", 
		"'private'", "'if'", "'else'", "'return'", "'break'", "'null'", "'this'", 
		"'using'", "'import'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
		"'&='", "'|='", "'^='", "'<<='", "'>>='", "'||'", "'&&'", "'!='", "'=='", 
		"'>'", "'>>'", "'>='", "'<'", "'<<'", "'<='", "'-'", "'--'", "'+'", "'++'", 
		"'/'", "'*'", "'!'", "'.'", "'?'", "':'", "'->'", "'%'", "'~'", "'&'", 
		"'^'", "'|'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", 
		null, "'false'", "'true'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DeclareModule", "DeclareClass", "DeclareStruct", "DeclareClassInstance", 
		"DeclareFunction", "DeclareVariable", "DeclareGetter", "DeclareSetter", 
		"DeclareForLoop", "DeclareWhileLoop", "DeclareStatic", "DeclareAbstract", 
		"DeclarePublic", "DeclarePrivate", "ControlFlowIf", "ControlFlowElse", 
		"FunctionReturn", "Break", "NullReference", "ThisReference", "UsingDirective", 
		"ImportDirective", "AssignOperator", "PlusAssignOperator", "MinusAssignOperator", 
		"MultiplyAssignOperator", "DivideAssignOperator", "ModuloAssignOperator", 
		"BitwiseAndAssignOperator", "BitwiseOrAssignOperator", "BitwiseXorAssignOperator", 
		"BitwiseLeftShiftAssignOperator", "BitwiseRightShiftAssignOperator", "LogicalOrOperator", 
		"LogicalAndOperator", "UnequalOperator", "EqualOperator", "GreaterOperator", 
		"ShiftRightOperator", "GreaterEqualOperator", "SmallerOperator", "ShiftLeftOperator", 
		"SmallerEqualOperator", "MinusOperator", "MinusMinusOperator", "PlusOperator", 
		"PlusPlusOperator", "DivideOperator", "MultiplyOperator", "LogicalNegationOperator", 
		"DotOperator", "QuestionMarkOperator", "ColonOperator", "ReferenceOperator", 
		"ModuloOperator", "ComplimentOperator", "BitwiseAndOperator", "BitwiseXorOperator", 
		"BitwiseOrOperator", "OpeningRoundBracket", "ClosingRoundBracket", "OpeningCurlyBracket", 
		"ClosingCurlyBracket", "SquarebracketLeft", "SquarebracketRight", "CommaSeperator", 
		"SemicolonSeperator", "BooleanLiteral", "False_", "True_", "IntegerLiteral", 
		"FloatingLiteral", "StringLiteral", "UnterminatedStringLiteral", "DecimalLiteral", 
		"Identifier", "COMMENT", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BITE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BITEParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BITEParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BITEParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext[] module() {
			return GetRuleContexts<ModuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module(int i) {
			return GetRuleContext<ModuleContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEVisitor<TResult> typedVisitor = visitor as IBITEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DeclareModule) {
				{
				{
				State = 104;
				module();
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleDeclarationContext moduleDeclaration() {
			return GetRuleContext<ModuleDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(BITEParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImportDirectiveContext[] importDirective() {
			return GetRuleContexts<ImportDirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDirectiveContext importDirective(int i) {
			return GetRuleContext<ImportDirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDirectiveContext[] usingDirective() {
			return GetRuleContexts<UsingDirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDirectiveContext usingDirective(int i) {
			return GetRuleContext<UsingDirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEVisitor<TResult> typedVisitor = visitor as IBITEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			moduleDeclaration();
			State = 115;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 113;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case ImportDirective:
						{
						State = 111;
						importDirective();
						}
						break;
					case UsingDirective:
						{
						State = 112;
						usingDirective();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 117;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DeclareClass) | (1L << DeclareStruct) | (1L << DeclareFunction) | (1L << DeclareVariable) | (1L << DeclareForLoop) | (1L << DeclareWhileLoop) | (1L << DeclareStatic) | (1L << DeclareAbstract) | (1L << DeclarePublic) | (1L << DeclarePrivate) | (1L << ControlFlowIf) | (1L << FunctionReturn) | (1L << Break) | (1L << NullReference) | (1L << ThisReference) | (1L << UsingDirective) | (1L << MinusOperator) | (1L << MinusMinusOperator) | (1L << PlusOperator) | (1L << PlusPlusOperator) | (1L << LogicalNegationOperator) | (1L << ComplimentOperator) | (1L << OpeningRoundBracket) | (1L << OpeningCurlyBracket))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (BooleanLiteral - 68)) | (1L << (IntegerLiteral - 68)) | (1L << (FloatingLiteral - 68)) | (1L << (StringLiteral - 68)) | (1L << (Identifier - 68)))) != 0)) {
				{
				{
				State = 118;
				declaration();
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 124;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DeclareModule() { return GetToken(BITEParser.DeclareModule, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeperator() { return GetToken(BITEParser.SemicolonSeperator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEVisitor<TResult> typedVisitor = visitor as IBITEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleDeclarationContext moduleDeclaration() {
		ModuleDeclarationContext _localctx = new ModuleDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_moduleDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(DeclareModule);
			State = 127;
			Match(Identifier);
			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DotOperator) {
				{
				{
				State = 128;
				Match(DotOperator);
				State = 129;
				Match(Identifier);
				}
				}
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 135;
			Match(SemicolonSeperator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ImportDirective() { return GetToken(BITEParser.ImportDirective, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeperator() { return GetToken(BITEParser.SemicolonSeperator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public ImportDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEVisitor<TResult> typedVisitor = visitor as IBITEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportDirectiveContext importDirective() {
		ImportDirectiveContext _localctx = new ImportDirectiveContext(Context, State);
		EnterRule(_localctx, 6, RULE_importDirective);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			Match(ImportDirective);
			State = 138;
			Match(Identifier);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DotOperator) {
				{
				{
				State = 139;
				Match(DotOperator);
				State = 140;
				Match(Identifier);
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 146;
			Match(SemicolonSeperator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UsingDirective() { return GetToken(BITEParser.UsingDirective, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeperator() { return GetToken(BITEParser.SemicolonSeperator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public UsingDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEVisitor<TResult> typedVisitor = visitor as IBITEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
